--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@
 CMakeFiles/
 CMakeCache.txt
 #===
+# Java
+#---
+# .gradle
+.gradle/
+*.gradle
+# build directory
+build/
+#===
 # Python
 #---
 # Compiled python modules
